--- a/index.html
+++ b/index.html
@@ -20,11 +20,15 @@
   <header class="page-header">
     <div class="container header-container">
       <nav class="header-nav">
-        <a class="logo header-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        <a class="logo header-logo" 
+        href="./index.html">Web<span class="logo-part">Studio</span></a>
         <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+            <li class="nav-item"><a class="nav-link current" 
+              href="./index.html">Studio</a></li>
+            <li class="nav-item"><a class="nav-link current" 
+              href="">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link current" 
+              href="">Contacts</a></li>
         </ul>
       </nav>
     
@@ -54,19 +58,39 @@
         <h2 class="skills-title-main">skills</h2>
         <ul class="skills-list">
           <li class="skills-item">
+            <div class="skilss-item-icons skilss-item-background">
+              <svg width="40" hight="40">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
               <h3 class="skills-title">Strategy</h3>
               <p class="skills-text">Our goal is to identify the business
               problem to walk away with the perfect and creative   solution. </p>
           </li>
           <li class="skills-item">
+            <div class="skilss-item-icons skilss-item-background">
+              <svg width="40" hight="40">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="skills-title">Punctuality</h3>
             <p class="skills-text">Bring the key message to the brand's audience for the   best price within the shortest possible time.</p>
           </li>
           <li class="skills-item">
+            <div class="skilss-item-icons skilss-item-background">
+              <svg width="40" hight="40">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="skills-title">Diligence</h3>
             <p class="skills-text">Research and confirm brands that present the strongest   digital growth opportunities and minimize risk.</p>
           </li>
           <li class="skills-item">
+            <div class="skilss-item-icons skilss-item-background">
+              <svg width="40" hight="40">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="skills-title">Technologies</h3>
             <p class="skills-text">Design practice focused on digital experiences. We   bring forth a deep passion for problem-solving.</p>
           </li>
@@ -87,6 +111,28 @@
                 <h3 class="team-table-title">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
               </div>
+              <div class="team-container-icons">
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" hight="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" hight="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" hight="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" hight=24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                  </a>
+              </div>
           </li>
           <li class="team-item">
               <img class="team-image" src="./images/tomford.jpg" 
@@ -95,6 +141,28 @@
               <div class="team-walker">
                 <h3 class="team-table-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+              </div>
+              <div class="team-container-icons">
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+              <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+              <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+              <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
               </div>
           </li>
           <li class="team-item">
@@ -105,6 +173,28 @@
                 <h3 class="team-table-title">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
               </div>
+              <div class="team-container-icons">
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+                </a>
+              </div>
           </li>
           <li class="team-item">
               <img class="team-image" src="./images/danielwilson.jpg" 
@@ -113,6 +203,28 @@
               <div class="team-walker">
                 <h3 class="team-table-title">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+              </div>
+              <div class="team-container-icons">
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+                </a>
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="40" hight="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+                </a>
               </div>
           </li>
         </ul>
@@ -125,43 +237,115 @@
         <div class="container container-portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item">
-              <img class="portfolio-image" src="./images/portfolio1.jpg" alt="Banking App" width="360">
+            <li class="portfolio-item port">
+              <div class="image-info">
+              <img class="portfolio-image" 
+              src="./images/portfolio1.jpg" 
+              alt="Banking App" 
+              width="360">
+              <div class="portfolio-item-info">
+                <p class="image-info-text">14 Stylish and 
+                  User-Friendly App Design Concepts · 
+                  Task Manager App · Calorie Tracker App ·
+                   Exotic Fruit Ecommerce App · Cloud Storage
+                    App</p>
+              </div>
+            </div>
               <div class="portfolio-walker">
                 <h3 class="portfolio-table-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-image" src="./images/portfolio2.jpg" alt="Cashless Payment" width="360">
+              <div class="image-info">
+              <img class="portfolio-image" 
+              src="./images/portfolio2.jpg" 
+              alt="Cashless Payment" 
+              width="360">
+              <div class="portfolio-item-info">
+                <p class="image-info-text">14 Stylish and 
+                  User-Friendly App Design Concepts · 
+                  Task Manager App · Calorie Tracker App ·
+                   Exotic Fruit Ecommerce App · Cloud Storage
+                    App</p>
+              </div>
+            </div>
               <div class="portfolio-walker">
                 <h3 class="portfolio-table-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-image" src="./images/portfolio3.jpg" alt="Meditation App" width="360">
+              <div class="image-info">
+              <img class="portfolio-image" 
+              src="./images/portfolio3.jpg" 
+              alt="Meditation App"
+               width="360">
+               <div class="portfolio-item-info">
+                <p class="image-info-text">14 Stylish and 
+                  User-Friendly App Design Concepts · 
+                  Task Manager App · Calorie Tracker App ·
+                   Exotic Fruit Ecommerce App · Cloud Storage
+                    App</p>
+              </div>
+            </div>
               <div class="portfolio-walker">
                 <h3 class="portfolio-table-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-image" src="./images/portfolio4.jpg" alt="Taxi Service" width="360">
+              <div class="image-info">
+              <img class="portfolio-image" 
+              src="./images/portfolio4.jpg" 
+              alt="Taxi Service" 
+              width="360">
+              <div class="portfolio-item-info">
+                <p class="image-info-text">14 Stylish and 
+                  User-Friendly App Design Concepts · 
+                  Task Manager App · Calorie Tracker App ·
+                   Exotic Fruit Ecommerce App · Cloud Storage
+                    App</p>
+              </div>
+            </div>
               <div class="portfolio-walker">
                 <h3 class="portfolio-table-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-image" src="./images/portfolio5.jpg" alt="Screen Illustrations" width="360">
+              <div class="image-info">
+              <img class="portfolio-image" 
+              src="./images/portfolio5.jpg" 
+              alt="Screen Illustrations" 
+              width="360">
+              <div class="portfolio-item-info">
+                <p class="image-info-text">14 Stylish and 
+                  User-Friendly App Design Concepts · 
+                  Task Manager App · Calorie Tracker App ·
+                   Exotic Fruit Ecommerce App · Cloud Storage
+                    App</p>
+              </div>
+            </div>
               <div class="portfolio-walker">
                 <h3 class="portfolio-table-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img class="portfolio-image" src="./images/portfolio6.jpg" alt="Online Courses" width="360">
+              <div class="image-info">
+              <img class="portfolio-image" 
+              src="./images/portfolio6.jpg" 
+              alt="Online Courses" 
+              width="360">
+              <div class="portfolio-item-info">
+                <p class="image-info-text">14 Stylish and 
+                  User-Friendly App Design Concepts · 
+                  Task Manager App · Calorie Tracker App ·
+                   Exotic Fruit Ecommerce App · Cloud Storage
+                    App</p>
+              </div>
+            </div>
               <div class="portfolio-walker">
                 <h3 class="portfolio-table-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -178,6 +362,23 @@
     <div class="container container-footer">
       <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
       <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    </div>
+    <div class="footer-socialmedia">
+      <p class="footer-socialmedia-text">Social media</p>
+      <div class="footer-socialmedia-icons">
+        <svg class="footer-icons" width="40" hight="40">
+          <use href="./images/icons.svg#icon-instagram"></use>
+        </svg>
+        <svg class="footer-icons" width="40" hight="40">
+          <use href="./images/icons.svg#icon-twitter"></use>
+        </svg>
+        <svg class="footer-icons" width="40" hight="40">
+          <use href="./images/icons.svg#icon-facebook"></use>
+        </svg>
+        <svg class="footer-icons" width="40" hight="40">
+          <use href="./images/icons.svg#icon-linkedin"></use>
+        </svg>
+      </div>
     </div>
   </footer>
 </body>
