--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul class="skills-list">
           <li class="skills-item">
             <div class="skilss-item-icons skilss-item-background">
-              <svg width="40" hight="40">
+              <svg width="64" height="64">
                 <use href="./images/icons.svg#icon-antenna"></use>
               </svg>
             </div>
@@ -69,7 +69,7 @@
           </li>
           <li class="skills-item">
             <div class="skilss-item-icons skilss-item-background">
-              <svg width="40" hight="40">
+              <svg width="64" height="64">
                 <use href="./images/icons.svg#icon-clock"></use>
               </svg>
             </div>
@@ -78,7 +78,7 @@
           </li>
           <li class="skills-item">
             <div class="skilss-item-icons skilss-item-background">
-              <svg width="40" hight="40">
+              <svg width="64" height="64">
                 <use href="./images/icons.svg#icon-diagram"></use>
               </svg>
             </div>
@@ -87,7 +87,7 @@
           </li>
           <li class="skills-item">
             <div class="skilss-item-icons skilss-item-background">
-              <svg width="40" hight="40">
+              <svg width="64" height="64">
                 <use href="./images/icons.svg#icon-astronaut"></use>
               </svg>
             </div>
@@ -112,26 +112,36 @@
                 <p class="team-text">Product Designer</p>
               </div>
               <div class="team-container-icons">
+                <ul class="team-table-icons">
+                  <li class="">
                 <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" hight="24">
+                  <svg class="team-icons" width="24" height="24">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
+              </li>
+              <li class="">
                 <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" hight="24">
+                  <svg class="team-icons" width="24" height="24">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" hight="24">
+                  <svg class="team-icons" width="24" height="24">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
+                </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" hight=24">
+                  <svg class="team-icons" width="24" height="24">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
                   </a>
+                  </li>
+                </ul>
               </div>
           </li>
           <li class="team-item">
@@ -143,26 +153,36 @@
                 <p class="team-text">Frontend Developer</p>
               </div>
               <div class="team-container-icons">
+                <ul class="team-table-icons">
+                  <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
-              </a>
+                </a>
+                  </li>
+                  <li class="">
               <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
+                    </li>
+                      <li class="">
               <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
+                      </li>
+                  <li class="">
               <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
+                        </li>
+                      </ul>
               </div>
           </li>
           <li class="team-item">
@@ -174,26 +194,36 @@
                 <p class="team-text">Marketing</p>
               </div>
               <div class="team-container-icons">
+                <ul class="team-table-icons">
+                  <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
                 </a>
+                  </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
                 </a>
+                </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
+                </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
                 </a>
+                </li>
+                </ul>
               </div>
           </li>
           <li class="team-item">
@@ -205,26 +235,36 @@
                 <p class="team-text">UI Designer</p>
               </div>
               <div class="team-container-icons">
+                <ul class="team-table-icons">
+                  <li class="">
+                    <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                    </a>
+                  </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                </a>
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
                 </a>
+                </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
+                </li>
+                <li class="">
                 <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="40" hight="40">
+                <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
                 </a>
+                </li>
+                </ul>
               </div>
           </li>
         </ul>
@@ -237,7 +277,7 @@
         <div class="container container-portfolio">
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item port">
+            <li class="portfolio-item">
               <div class="image-info">
               <img class="portfolio-image" 
               src="./images/portfolio1.jpg" 
@@ -365,20 +405,28 @@
     </div>
     <div class="footer-socialmedia">
       <p class="footer-socialmedia-text">Social media</p>
-      <div class="footer-socialmedia-icons">
-        <svg class="footer-icons" width="40" hight="40">
-          <use href="./images/icons.svg#icon-instagram"></use>
-        </svg>
-        <svg class="footer-icons" width="40" hight="40">
-          <use href="./images/icons.svg#icon-twitter"></use>
-        </svg>
-        <svg class="footer-icons" width="40" hight="40">
-          <use href="./images/icons.svg#icon-facebook"></use>
-        </svg>
-        <svg class="footer-icons" width="40" hight="40">
-          <use href="./images/icons.svg#icon-linkedin"></use>
-        </svg>
-      </div>
+      <ul class="footer-table">
+        <li class="footer-socialmedia-icons">
+          <svg class="footer-icons" width="40" height="40">
+            <use href="./images/icons.svg#icon-instagram"></use>
+          </svg>
+        </li>
+        <li class="footer-socialmedia-icons">
+          <svg class="footer-icons" width="40" height="40">
+            <use href="./images/icons.svg#icon-twitter"></use>
+          </svg>
+        </li>
+        <li class="footer-socialmedia-icons">
+          <svg class="footer-icons" width="40" height="40">
+            <use href="./images/icons.svg#icon-facebook"></use>
+          </svg>
+        </li>
+        <li class="footer-socialmedia-icons">
+          <svg class="footer-icons" width="40" height="40">
+            <use href="./images/icons.svg#icon-linkedin"></use>
+          </svg>
+        </li>
+      </ul>
     </div>
   </footer>
 </body>
