--- a/index.html
+++ b/index.html
@@ -400,33 +400,42 @@
 
   <footer class="footer">
     <div class="container container-footer">
-      <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
-    <div class="footer-socialmedia">
-      <p class="footer-socialmedia-text">Social media</p>
-      <ul class="footer-table">
-        <li class="footer-socialmedia-icons">
-          <svg class="footer-icons" width="40" height="40">
-            <use href="./images/icons.svg#icon-instagram"></use>
-          </svg>
-        </li>
-        <li class="footer-socialmedia-icons">
-          <svg class="footer-icons" width="40" height="40">
-            <use href="./images/icons.svg#icon-twitter"></use>
-          </svg>
-        </li>
-        <li class="footer-socialmedia-icons">
-          <svg class="footer-icons" width="40" height="40">
-            <use href="./images/icons.svg#icon-facebook"></use>
-          </svg>
-        </li>
-        <li class="footer-socialmedia-icons">
-          <svg class="footer-icons" width="40" height="40">
-            <use href="./images/icons.svg#icon-linkedin"></use>
-          </svg>
-        </li>
-      </ul>
+      <div class="footer-block-left">
+        <a class="logo footer-logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
+      <div class="footer-socialmedia">
+        <p class="footer-socialmedia-text">Social media</p>
+        <ul class="footer-table">
+          <li class="footer-socialmedia-icons">
+            <a href="" class="footer-socialmedia-link">
+              <svg class="footer-icons" width="40" height="40">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="footer-socialmedia-icons">
+            <a href="" class="footer-socialmedia-link">
+            <svg class="footer-icons" width="40" height="40">
+              <use href="./images/icons.svg#icon-twitter"></use>
+            </svg>
+            </a>
+          </li>
+          <li class="footer-socialmedia-icons">
+            <a href="" class="footer-socialmedia-link">
+              <svg class="footer-icons" width="40" height="40">
+                <use href="./images/icons.svg#icon-facebook"></use>
+             </svg>
+            </a>
+          </li>
+          <li class="footer-socialmedia-icons">
+            <a href="" class="footer-socialmedia-link">
+            <svg class="footer-icons" width="40" height="40">
+              <use href="./images/icons.svg#icon-linkedin"></use>
+            </svg>
+            </a>
+          </li>
+        </ul>
     </div>
   </footer>
 </body>
