--- a/index.html
+++ b/index.html
@@ -104,42 +104,40 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
-              <img class="team-image" src="./images/markguerrero.jpg" 
+            <img class="team-image" src="./images/markguerrero.jpg" 
               alt="Mark Guerrero Product Designer" 
               width="264" height="260">
-              <div class="team-walker">
-                <h3 class="team-table-title">Mark Guerrero</h3>
-                <p class="team-text">Product Designer</p>
-              </div>
-              <div class="team-container-icons">
+            <h3 class="team-table-title">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
+            <div class="team-container-icons">
                 <ul class="team-table-icons">
-                  <li class="">
-                <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="">
-                <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-                </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-                </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                  <svg class="team-icons" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                  </a>
+                  <li class="team-li-icons">
+                    <a href="#" class="team-icons-link">
+                      <svg class="team-icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-li-icons">
+                    <a href="#" class="team-icons-link">
+                      <svg class="team-icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-li-icons">
+                    <a href="#" class="team-icons-link">
+                      <svg class="team-icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-li-icons">
+                    <a href="#" class="team-icons-link">
+                      <svg class="team-icons" width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -148,34 +146,32 @@
               <img class="team-image" src="./images/tomford.jpg" 
               alt="Tom Ford Frontend Developer" 
               width="264" height="260">
-              <div class="team-walker">
                 <h3 class="team-table-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
-              </div>
-              <div class="team-container-icons">
-                <ul class="team-table-icons">
-                  <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                </a>
-                  </li>
-                  <li class="">
+                <div class="team-container-icons">
+                  <ul class="team-table-icons">
+                    <li class="">
+                      <a href="#" class="team-icons-link">
+                        <svg class="team-icons" width="24" height="24">
+                          <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                      </a>
+                   </li>
+                   <li class="team-li-icons">
               <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
                     </li>
-                      <li class="">
+                      <li class="team-li-icons">
               <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
                       </li>
-                  <li class="">
+                  <li class="team-li-icons">
               <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
@@ -195,28 +191,28 @@
               </div>
               <div class="team-container-icons">
                 <ul class="team-table-icons">
-                  <li class="">
+                  <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
                 </a>
                   </li>
-                <li class="">
+                <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="">
+                <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="">
+                <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
@@ -236,28 +232,28 @@
               </div>
               <div class="team-container-icons">
                 <ul class="team-table-icons">
-                  <li class="">
+                  <li class="team-li-icons">
                     <a href="#" class="team-icons-link">
                     <svg class="team-icons" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                     </a>
                   </li>
-                <li class="">
+                <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="">
+                <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="">
+                <li class="team-li-icons">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
