--- a/index.html
+++ b/index.html
@@ -104,74 +104,76 @@
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li class="team-item">
-            <img class="team-image" src="./images/markguerrero.jpg" 
+            <div class="team-container-walker">
+              <img class="team-image" src="./images/markguerrero.jpg" 
               alt="Mark Guerrero Product Designer" 
               width="264" height="260">
-            <h3 class="team-table-title">Mark Guerrero</h3>
-            <p class="team-text">Product Designer</p>
-            <div class="team-container-icons">
-                <ul class="team-table-icons">
-                  <li class="team-li-icons">
-                    <a href="#" class="team-icons-link">
-                      <svg class="team-icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-li-icons">
-                    <a href="#" class="team-icons-link">
-                      <svg class="team-icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-li-icons">
-                    <a href="#" class="team-icons-link">
-                      <svg class="team-icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="team-li-icons">
-                    <a href="#" class="team-icons-link">
-                      <svg class="team-icons" width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
-              </div>
+              <h3 class="team-table-title">Mark Guerrero</h3>
+              <p class="team-text">Product Designer</p>
+              <ul class="team-table-icons">
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+              <li class="team-li-icons">
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="team-li-icons">
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+               </li>
+              <li class="team-li-icons">
+                <a href="#" class="team-icons-link">
+                  <svg class="team-icons" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
           <li class="team-item">
               <img class="team-image" src="./images/tomford.jpg" 
               alt="Tom Ford Frontend Developer" 
               width="264" height="260">
+              <div class="team-walker">
                 <h3 class="team-table-title">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
-                <div class="team-container-icons">
-                  <ul class="team-table-icons">
-                    <li class="">
-                      <a href="#" class="team-icons-link">
-                        <svg class="team-icons" width="24" height="24">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
-                   </li>
-                   <li class="team-li-icons">
+              </div>
+              <div class="team-container-icons">
+                <ul class="team-table-icons">
+                  <li class="">
+                <a href="#" class="team-icons-link">
+                <svg class="team-icons" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+                </a>
+                  </li>
+                  <li class="">
               <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
                     </li>
-                      <li class="team-li-icons">
+                      <li class="">
               <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
                       </li>
-                  <li class="team-li-icons">
+                  <li class="">
               <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
@@ -191,28 +193,28 @@
               </div>
               <div class="team-container-icons">
                 <ul class="team-table-icons">
-                  <li class="team-li-icons">
+                  <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
                 </a>
                   </li>
-                <li class="team-li-icons">
+                <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="team-li-icons">
+                <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="team-li-icons">
+                <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
@@ -232,28 +234,28 @@
               </div>
               <div class="team-container-icons">
                 <ul class="team-table-icons">
-                  <li class="team-li-icons">
+                  <li class="">
                     <a href="#" class="team-icons-link">
                     <svg class="team-icons" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                     </a>
                   </li>
-                <li class="team-li-icons">
+                <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="team-li-icons">
+                <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
                 </a>
                 </li>
-                <li class="team-li-icons">
+                <li class="">
                 <a href="#" class="team-icons-link">
                 <svg class="team-icons" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
