--- a/index.html
+++ b/index.html
@@ -141,129 +141,123 @@
                 </li>
               </ul>
             </div>
-            </li>
-            <li class="team-item">
-              <img class="team-image" src="./images/tomford.jpg" 
-              alt="Tom Ford Frontend Developer" 
-              width="264" height="260">
-              <div class="team-walker">
-                <h3 class="team-table-title">Tom Ford</h3>
-                <p class="team-text">Frontend Developer</p>
-              </div>
-              <div class="team-container-icons">
-                <ul class="team-table-icons">
-                  <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                </a>
-                  </li>
-                  <li class="">
-              <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-              </a>
-                    </li>
-                      <li class="">
-              <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-              </a>
-                      </li>
-                  <li class="">
-              <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-                        </li>
-                      </ul>
-              </div>
           </li>
           <li class="team-item">
-              <img class="team-image" src="./images/camilagarcia.jpg" 
-              alt="Camila Garcia Marketing" 
-              width="264" height="260">
-              <div class="team-walker">
-                <h3 class="team-table-title">Camila Garcia</h3>
-                <p class="team-text">Marketing</p>
-              </div>
-              <div class="team-container-icons">
-                <ul class="team-table-icons">
-                  <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram"></use>
-                </svg>
-                </a>
-                  </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                </a>
-                </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                </a>
-                </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-                </a>
-                </li>
-                </ul>
-              </div>
-          </li>
-          <li class="team-item">
-              <img class="team-image" src="./images/danielwilson.jpg" 
-              alt="Daniel Wilson UI Designer" 
-              width="264" height="260" >
-              <div class="team-walker">
-                <h3 class="team-table-title">Daniel Wilson</h3>
-                <p class="team-text">UI Designer</p>
-              </div>
-              <div class="team-container-icons">
-                <ul class="team-table-icons">
-                  <li class="">
-                    <a href="#" class="team-icons-link">
+            <img class="team-image" src="./images/tomford.jpg" 
+            alt="Tom Ford Frontend Developer" 
+            width="264" height="260">
+            <div class="team-container-walker">
+              <h3 class="team-table-title">Tom Ford</h3>
+              <p class="team-text">Frontend Developer</p>
+              <ul class="team-table-icons">
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
                     <svg class="team-icons" width="24" height="24">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
-                    </a>
-                  </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter"></use>
-                </svg>
-                </a>
+                  </a>
                 </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook"></use>
-                </svg>
-                </a>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
                 </li>
-                <li class="">
-                <a href="#" class="team-icons-link">
-                <svg class="team-icons" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin"></use>
-                </svg>
-                </a>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
                 </li>
-                </ul>
-              </div>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="team-item">
+            <img class="team-image" src="./images/camilagarcia.jpg" 
+            alt="Camila Garcia Marketing" 
+            width="264" height="260">
+            <div class="team-container-walker">
+              <h3 class="team-table-title">Camila Garcia</h3>
+              <p class="team-text">Marketing</p>
+              <ul class="team-table-icons">
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="team-item">
+            <img class="team-image" src="./images/danielwilson.jpg" 
+            alt="Daniel Wilson UI Designer" 
+            width="264" height="260" >
+            <div class="team-container-walker">
+              <h3 class="team-table-title">Daniel Wilson</h3>
+              <p class="team-text">UI Designer</p>
+              <ul class="team-table-icons">
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="team-li-icons">
+                  <a href="#" class="team-icons-link">
+                    <svg class="team-icons" width="24" height="24">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </li>
         </ul>
       </div> 
