--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <ul class="nav-list">
             <li class="nav-item"><a class="nav-link current" 
               href="./index.html">Studio</a></li>
-            <li class="nav-item"><a class="nav-link current" 
+            <li class="nav-item"><a class="nav-link" 
               href="">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link current" 
+            <li class="nav-item"><a class="nav-link" 
               href="">Contacts</a></li>
         </ul>
       </nav>
